amazon-eks/container-insights/fargate/fluentbit/fluentbit.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: aws-observability
  labels:
    aws-observability: enabled
