amazon-eks/container-insights/fargate/fluentbit/demo-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mynginx-service-lb
  namespace: fp1
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
    service.beta.kubernetes.io/aws-load-balancer-type: nlb-ip
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
spec:
  type: LoadBalancer
  selector:
    app: mynginx
  ports:
  - name: mynginx-service-lb-port
    protocol: TCP
    port: 80
    targetPort: 80
